# tick_coach_agent

./: .gitignore  Makefile  README.md  TODO.md  Usage_Accounting_Track_AI_Model_Usage_with_OpenRouter.md  index.py  patch.diff  pyproject.toml  requirements.txt  yc-commands.txt
agents/: message_handler.py  prompts.py  test.ipynb  test.py  tools.py  utils.py  ydb_checkpointer.py
schema/: ydb.sql
test/: hitl.py  test.ipynb
tick-coach-agent/: index.py  requirements.txt
tick-coach-agent/agents/: test.ipynb  test.py
unified_comprehensive_approach/: PCAM.md
xmls/: Form.xml  TrainingSession.xml
