[project]
name = "tick-coach-agent"
version = "0.1.0"
description = "Agent for tick-coach"
authors = [
    { name = "i-b8o" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents>=0.1.3",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.1",
    "rich>=14.2.0",
    "setuptools>=80.9.0",
    "ydb>=3.21.12",
]
